--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack serve"
   },
   "author": "sickboy",
-  "license": "ISC",
+  "license": "MIT",
   "description": "An open-source platform where coders pair up for free mock coding interview",
   "dependencies": {
     "@codemirror/commands": "^6.8.0",
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.26.9",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack-bundle-analyzer": "^4.10.2",
