--- a/package.json
+++ b/package.json
@@ -11,28 +11,21 @@
   "description": "An open-source platform where coders pair up for free mock coding interview",
   "dependencies": {
     "@codemirror/commands": "^6.8.0",
-    "@codemirror/lang-cpp": "^6.0.2",
-    "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.3",
-    "@codemirror/lang-python": "^6.1.7",
     "@codemirror/language": "^6.11.0",
     "@codemirror/search": "^6.5.10",
     "@codemirror/view": "^6.36.4",
     "codemirror": "^6.0.1",
-    "interactjs": "^1.10.27",
-    "marked": "^15.0.7",
-    "showdown": "^2.1.0"
+    "interactjs": "^1.10.27"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-dev-server": "^5.2.0",
+    "wrangler": "^4.6.0"
   }
 }
