--- a/firebase.json
+++ b/firebase.json
@@ -15,22 +15,25 @@
   },
   "emulators": {
     "auth": {
-      "port": 9099
+      "port": 9001
     },
     "functions": {
-      "port": 5001
-    },
-    "database": {
       "port": 9002
     },
+    "database": {
+      "port": 9003
+    },
     "hosting": {
-      "port": 5000
+      "port": 9004
     },
     "ui": {
       "enabled": true,
-      "port": 5002
+      "port": 9005
     },
-    "singleProjectMode": true
+    "singleProjectMode": true,
+    "firestore": {
+      "port": 9006
+    }
   },
   "database": {
     "rules": "database.rules.json"
