--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "animate.css": "^4.1.1",
     "codemirror": "^6.0.1",
     "interactjs": "^1.10.27",
-    "sweetalert2": "^11.17.2"
+    "sweetalert2": "^11.17.2",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
     "file-loader": "^6.2.0",
-    "firebase-tools": "^14.0.1",
     "firebase": "^11.5.0",
+    "firebase-tools": "^14.0.1",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack-bundle-analyzer": "^4.10.2",
