--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "mockemon",
   "version": "1.0.0",
   "private": "true",
-  "scripts": {
-    "build": "webpack --mode development"
-  },
+  "scripts": {},
   "author": "sickboy",
   "license": "MIT",
   "description": "An open-source platform where coders pair up for free mock coding interview",
@@ -16,20 +14,13 @@
     "@codemirror/view": "^6.36.4",
     "animate.css": "^4.1.1",
     "codemirror": "^6.0.1",
+    "express": "^5.2.1",
     "interactjs": "^1.10.27",
+    "mongoose": "^9.1.5",
     "sweetalert2": "^11.17.2",
     "tippy.js": "^6.3.7"
   },
   "devDependencies": {
-    "css-loader": "^7.1.2",
-    "dotenv-webpack": "^8.1.0",
-    "file-loader": "^6.2.0",
-    "firebase": "^11.5.0",
-    "firebase-tools": "^14.0.1",
-    "html-webpack-plugin": "^5.6.3",
-    "style-loader": "^4.0.0",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "firebase": "^11.5.0"
   }
 }
