--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tippy.js": "^6.3.7"
   },
   "devDependencies": {
-    "firebase": "^11.5.0"
+    "firebase": "^11.5.0",
+    "vite": "^7.3.1"
   }
 }
