--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mockemon",
   "version": "1.0.0",
   "private": "true",
+  "type": "module",
   "scripts": {},
   "author": "sickboy",
   "license": "MIT",
@@ -14,9 +15,13 @@
     "@codemirror/view": "^6.36.4",
     "animate.css": "^4.1.1",
     "codemirror": "^6.0.1",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "firebase-admin": "^13.6.0",
     "interactjs": "^1.10.27",
     "mongoose": "^9.1.5",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "sweetalert2": "^11.17.2",
     "tippy.js": "^6.3.7"
   },
